--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glory Church</title>
-    <link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./css/all.min.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/home.css" />
+    <base href="/glory-church/" />
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/home.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -36,7 +37,7 @@
           <a href="/">
             <img
               loading="lazy"
-              src="./img/logo.png"
+              src="/img/logo.png"
               alt="Logo Chiesa"
               height="72"
             />
@@ -47,35 +48,35 @@
           <ul class="nav-menu">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/about.html">Su Noi</a>
+              <a class="nav-link" href="/pages/about.html">Su Noi</a>
             </li>
             <li class="dropdown">
-              <a class="nav-link" href="./pages/resources/resources.html"
+              <a class="nav-link" href="/pages/resources/resources.html"
                 >Risorse Online</a
               >
               <ul class="dropmenu">
                 <li>
-                  <a class="nav-link" href="./pages/resources/prop.html"
+                  <a class="nav-link" href="/pages/resources/prop.html"
                     >Sermoni</a
                   >
                 </li>
                 <li>
-                  <a class="nav-link" href="./pages/resources/music.html"
+                  <a class="nav-link" href="/pages/resources/music.html"
                     >Musica</a
                   >
                 </li>
                 <li>
-                  <a class="nav-link" href="./pages/resources/books.html"
+                  <a class="nav-link" href="/pages/resources/books.html"
                     >Libri</a
                   >
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/activity.html">Eventi</a>
+              <a class="nav-link" href="/pages/activity.html">Eventi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/contacts.html">Contatti</a>
+              <a class="nav-link" href="/pages/contacts.html">Contatti</a>
             </li>
           </ul>
         </nav>
@@ -85,7 +86,7 @@
             <a class="nav-link" href="#" class="current-lang"
               ><img
                 loading="lazy"
-                src="./img/icons/italy.webp"
+                src="/img/icons/italy.webp"
                 alt="Ukrainian flag icon"
             /></a>
             <ul class="dropmenu">
@@ -93,7 +94,7 @@
                 <a href="en/index.html"
                   ><img
                     loading="lazy"
-                    src="./img/icons/ukraine.webp"
+                    src="/img/icons/ukraine.webp"
                     alt="English flag icon"
                 /></a>
               </li>
@@ -101,7 +102,7 @@
                 <a href="ru/index.html"
                   ><img
                     loading="lazy"
-                    src="./img/icons/uk.webp"
+                    src="/img/icons/uk.webp"
                     alt="Russian flag icon"
                 /></a>
               </li>
@@ -121,7 +122,7 @@
               Un luogo di accoglienza e di crescita nella Parola di Dio, anche
               in tempi difficili.
             </p>
-            <a href="./pages/activity.html" class="btn"
+            <a href="/pages/activity.html" class="btn"
               >Unisciti a noi Domenica</a
             >
           </div>
@@ -138,12 +139,12 @@
                 disse: 'Io sono la via, la verità e la vita.' Troviamo la nostra
                 forza e il nostro scopo in Lui."
               </p>
-              <a href="./pages/about.html" class="btn">La Nostra Storia</a>
+              <a href="/pages/about.html" class="btn">La Nostra Storia</a>
             </div>
             <div class="img-cont anim">
               <img
                 loading="lazy"
-                src="./img/jesus-horiz.jpg"
+                src="/img/jesus-horiz.jpg"
                 alt="Bambini che giocano in chiesa"
               />
             </div>
@@ -153,7 +154,7 @@
             <div class="img-cont anim">
               <img
                 loading="lazy"
-                src="./img/prayer-horiz.jpg"
+                src="/img/prayer-horiz.jpg"
                 alt="Gruppo di persone che studiano la Bibbia"
               />
             </div>
@@ -168,7 +169,7 @@
                 YouTube)
               </p>
               <p><strong>Indirizzo:</strong> [Indirizzo fisico della Chiesa]</p>
-              <a href="./pages/activity.html" class="btn">I nostri eventi</a>
+              <a href="/pages/activity.html" class="btn">I nostri eventi</a>
             </div>
           </div>
         </div>
@@ -192,7 +193,7 @@
               <h4>Titolo del Messaggio: [Esempio: "La Pace nel Caos"]</h4>
               <p><strong>Predicatore:</strong> Pastore [Nome]</p>
               <p><strong>Data:</strong> [Data recente]</p>
-              <a href="./pages/resources/prop.html" class="btn"
+              <a href="/pages/resources/prop.html" class="btn"
                 >Vedi l'archivio completo</a
               >
             </div>
@@ -210,7 +211,7 @@
                 Una selezione di libri e studi scaricabili gratuitamente per
                 approfondire la tua fede.
               </p>
-              <a href="./pages/resources/libri.html" class="btn"
+              <a href="/pages/resources/libri.html" class="btn"
                 >Esplora la Libreria</a
               >
             </div>
@@ -221,9 +222,7 @@
                 Canti di lode e adorazione con link diretti alle nostre playlist
                 su YouTube.
               </p>
-              <a href="./pages/resources/musica.html" class="btn"
-                >Ascolta Ora</a
-              >
+              <a href="/pages/resources/musica.html" class="btn">Ascolta Ora</a>
             </div>
 
             <div class="resources-card anim">
@@ -232,7 +231,7 @@
                 Scopri come stiamo supportando la nostra comunità e come puoi
                 contribuire alle nostre iniziative.
               </p>
-              <a href="./pages/donat.html" class="btn">Scopri di Più</a>
+              <a href="/pages/donat.html" class="btn">Scopri di Più</a>
             </div>
           </div>
         </div>
